Closed Bug 50922 Opened 24 years ago Closed 24 years ago

contentLength isn't updated after reload and file size changes

Categories

(Core :: Networking: Cache, defect, P1)

Other
Linux
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: dp, Assigned: dp)

Details

(Whiteboard: [nsbeta3+])

Let b.html be in cache. If we reduce the size of b.html and hit reload, the new b.html is in cache but the content length doesn't get updated. The file still is the old size but the first 'newsize' bytes have been updated with the new b.html The cache record's mFile needs a statCache cleanup.
nsbeta3+ This could be causing so many corruptions...
Status: NEW → ASSIGNED
Keywords: nsbeta3
Priority: P3 → P1
Whiteboard: [nsbeta3+]
PDT agrees P1
Fixed by getting the write stream wrapper to notify the record of WriteComplete() and set the contentlength.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
verified: Linux rh6 2000091108 WinNT 2000091108 Mac os8.6 2000090820
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.