bug 50922 mFile's stat cache isnt refreshed after file changed on disk. This causes wrong content length and incorrect cache updates. r=neeti